<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp_hp.ameya_remindme.RM_AddTaskByDate_Activity">
<include layout="@layout/rm_my_toolbar_layout"
    android:id="@+id/toolbar_addTaskByDate" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_addTaskByDate">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar_addTaskByDate"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_below="@id/add_location_activity_tool_bar"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:id="@+id/imgBackground"
                android:layout_height="150dp"
                android:src="@drawable/tasks" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:id="@+id/et_addTaskbyDate_task_name"
            android:layout_marginTop="20dp"
            android:paddingLeft="8dp"
            android:layout_below="@+id/imgBackground"
            android:layout_centerHorizontal="true"
            android:hint="@string/et_addTaskbyDate_task_name"
            android:background="@drawable/edittext_bg"
            android:layout_marginBottom="10dp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:id="@+id/et_addTaskbyDate_task_description"
            android:layout_below="@+id/et_addTaskbyDate_task_name"
            android:layout_centerHorizontal="true"
            android:paddingLeft="8dp"
            android:hint="@string/et_addTaskbyDate_task_description"
            android:background="@drawable/edittext_bg"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            />

        <TextView
            android:layout_width="145dp"
            android:layout_height="30dp"
            android:paddingTop="6dp"
            android:text="@string/tv_addTaskbyDate_date"
            android:background="@drawable/edittext_bg"
            android:id="@+id/tv_addTaskbyDate_date"
           android:paddingLeft="15dp"
            android:layout_below="@id/et_addTaskbyDate_task_description"
            android:layout_marginLeft="11dp"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:textColorHint="#dadbdc"
            />

        <TextView
            android:layout_marginLeft="9dp"
            android:layout_width="145dp"
            android:layout_height="30dp"
            android:paddingLeft="15dp"
            android:paddingTop="6dp"
            android:text="@string/tv_addTaskbyDate_time"
            android:background="@drawable/edittext_bg"
            android:id="@+id/tv_addTaskbyDate_time"
            android:layout_below="@id/et_addTaskbyDate_task_description"
            android:layout_toRightOf="@id/tv_addTaskbyDate_date"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="#dadbdc"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/tv_addTaskbyDate_ringtone"
            android:id="@+id/tv_addTaskbyDate_ringtone"
            android:layout_centerInParent="true"
            android:layout_below="@+id/tv_addTaskbyDate_time"
            android:paddingLeft="15dp"
            android:textColorHint="#dadbdc"
            android:paddingTop="5dp"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_bg"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tv_addTaskbyDate_toneName"
            android:layout_below="@+id/tv_addTaskbyDate_ringtone"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_addTaskbyDate_notifyme"
            android:id="@+id/cb_addTaskbyDate_notifyme"
            android:checked="false"
            android:layout_alignTop="@+id/tv_addTaskbyDate_toneName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="38dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_addTaskbyDate_vibration"
            android:id="@+id/cb_addTaskbyDate_vibration"
            android:checked="false"
            android:layout_below="@+id/tv_addTaskbyDate_ringtone"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="40dp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
